<resources>
    <!-- ###################### -->
    <!-- Globals -->
    <!-- ###################### -->
    <string name="app_name">TournamentViewer</string>
    <string name="preference_file">de.tum.kickercoding.tournamentviewer.shared_pref_file</string>
    <!-- ###################### -->
    <!-- Start Menu-->
    <!-- ###################### -->
    <string name="edit_message">Enter a message</string>
    <string name="header_new_tournament">New Tournament</string>
    <string name="button_monsterdyp">MonsterDYP</string>
    <string name="header_load_tournament">Load Tournament</string>
    <string name="button_load_tournament">LOAD</string>
    <string name="button_load_ladder">Ladder</string>

    <!-- ###################### -->
    <!-- Monster Dyp Setup Basic Setup-->
    <!-- ###################### -->
    <string name="label_monsterdyp_basic_setup">Basic Settings</string>
    <string name="header_maxscore">Max Score</string>
    <string name="message_defaultmaxscore">7</string>
    <string name="header_numberofgames">Number of games (not yet implemented)</string>
    <string name="message_defaultnumberofgames">1</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="header_other_options">Other Options</string>
    <string name="message_one_on_one">1v1</string>
    <!-- ###################### -->
    <!-- Monster Dyp Player Setup-->
    <!-- ###################### -->
    <string name="label_monsterdyp_player_setup">Player selection</string>
    <string name="message_newPlayerDefault">New Player</string>

    <!-- ###################### -->
    <!-- Monster Dyp Tournament -->
    <!-- ###################### -->
    <string name="label_monsterdyp_tournament">Tournament</string>
    <string name="pager_header_stats">Stats</string>
    <string name="pager_header_games">Games</string>

    <string name="button_add_game">+Game</string>
    <string name="button_add_round">+Round</string>
    <string name="header_team_1">Team 1</string>
    <string name="header_team_2">Team 2</string>
    <string name="header_game_score">Score</string>

    <!-- Activity buttons -->
    <string name="button_generate_playoffs">PLAYOFFS</string>
    <string name="button_finish_tournament">FINISH</string>
    <string name="button_add_player_in_tournament">PLAYERS</string>

    <!-- ###################### -->
    <!-- Dialogs -->
    <!-- ###################### -->

    <!-- General -->
    <string name="button_confirm">Confirm</string>
    <string name="button_adjust">Reset</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>

    <!-- Edit player-->
    <string name="title_edit_game">Set the scores:</string>

    <!-- Add player in tournament-->
    <string name="title_add_player_in_tournament">Add new player:</string>

    <!-- Player details dialog -->
    <string name="title_player_details">Player details</string>
    <string name="header_player_rank_short">#</string>
    <string name="header_player_rank">Rank</string>
    <string name="header_player_name">Name</string>
    <string name="header_player_games_total_short">G</string>
    <string name="header_player_games_total">Games</string>
    <string name="header_player_games_won_short">W</string>
    <string name="header_player_games_won">Wins</string>
    <string name="header_player_games_lost_short">L</string>
    <string name="header_player_games_lost">Losses</string>
    <string name="header_player_games_tied_short">T</string>
    <string name="header_player_games_tied">Ties</string>
    <string name="header_player_goal_difference">&#177;</string>
    <string name="header_player_win_rate">&#216;</string>
    <string name="header_player_elo">Rating</string>
    <string name="button_player_details_back">Back</string>


    <!-- ###################### -->
    <!-- Ladder -->
    <!-- ###################### -->
    <string name="label_monsterdyp_ladder">Ladder</string>
    <string name="header_ladder_rank">Rank</string>
    <string name="header_ladder_name">Name</string>
    <string name="header_ladder_elo">Elo</string>
    <string name="dialog_edit_elo_message">This has a major impact on matchmaking and the ladder. This feature should
        usually only be used to speed up the initial ranking process.</string>
    <string name="dialog_edit_elo_edit_text_hint">1500</string>
</resources>
