<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/tournament_stats_header_line"
        style="@style/TvRow">

        <TextView
            style="@style/TvTextview.listheader"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:text="@string/header_player_rank_short"/>

        <TextView
            style="@style/TvTextview.listheader"
            android:layout_width="0dp"
            android:layout_weight="45"
            android:maxLines="1"
            android:text="@string/header_player_name"
            android:textAlignment="viewStart"/>

        <TextView
            style="@style/TvTextview.listheader"
            android:layout_width="0dp"
            android:layout_weight="15"
            android:maxLines="1"
            android:text="@string/header_player_games_total_short"
            android:textAlignment="center"/>

        <TextView
            style="@style/TvTextview.listheader"
            android:layout_width="0dp"
            android:layout_weight="15"
            android:maxLines="1"
            android:text="@string/header_player_games_won_short"
            android:textAlignment="center"/>

        <TextView
            style="@style/TvTextview.listheader"
            android:layout_width="0dp"
            android:layout_weight="20"
            android:maxLines="1"
            android:text="@string/header_player_win_rate"
            android:textAlignment="center"/>
    </LinearLayout>

    <View
        android:id="@+id/tournament_stats_header_divider"
        style="@style/TvDivider.Tiny"
        android:layout_below="@+id/tournament_stats_header_line"
        android:background="@color/divider_neutral"/>

    <ListView
        android:id="@+id/list_view_tournament_stats"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tournament_stats_header_divider"
        android:divider="@color/divider_neutral"
        android:dividerHeight="@dimen/divider_list">
    </ListView>
</RelativeLayout>