<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_global"
    tools:context=".setup.BasicSetupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TvTextview"
            android:text="@string/header_maxscore"
            android:textSize="@dimen/header_default_big"/>

        <View style="@style/TvDivider"/>

        <LinearLayout
            style="@style/TvRow"
            android:layout_marginBottom="@dimen/margin_large_bottom">

            <Button
                android:id="@+id/button_setup_decrement_score"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_remove_circle_grey"/>

            <TextView
                android:id="@+id/var_max_score"
                style="@style/TvTextview.large"
                android:layout_width="@dimen/text_single_double_digit"
                android:gravity="center"
                android:text="@string/message_defaultmaxscore"/>

            <Button
                android:id="@+id/button_setup_increment_score"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_add_circle_grey"/>
        </LinearLayout>

        <TextView
            style="@style/TvTextview"
            android:text="@string/header_numberofgames"
            android:textSize="@dimen/header_default_big"/>

        <View style="@style/TvDivider"/>

        <LinearLayout
            style="@style/TvRow"
            android:layout_marginBottom="@dimen/margin_large_bottom">

            <Button
                android:id="@+id/button_setup_decrement_games"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_remove_circle_grey"/>

            <TextView
                android:id="@+id/var_number_games"
                style="@style/TvTextview.large"
                android:layout_width="@dimen/text_single_double_digit"
                android:gravity="center"
                android:text="@string/message_defaultnumberofgames"/>

            <Button
                android:id="@+id/button_setup_increment_games"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_add_circle_grey"/>
        </LinearLayout>

        <TextView
            style="@style/TvTextview"
            android:text="@string/header_other_options"
            android:textSize="@dimen/header_default_big"/>

        <View style="@style/TvDivider"/>

        <CheckBox
            android:id="@+id/checkbox_one_on_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_one_on_one"/>

    </LinearLayout>
</FrameLayout>
