<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >

    <!-- root RelativeLayout workaround for dialog scaling -->
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_player_details"
            android:textSize="@dimen/text_default_size_big"/>

        <View style="@style/Divider.Small"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/header_player_rank"/>

            <TextView
                android:id="@+id/player_details_rank_global"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"/>
        </LinearLayout>

        <View style="@style/Divider.Tiny"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/header_player_name"/>

            <TextView
                android:id="@+id/player_details_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"/>
        </LinearLayout>

        <View style="@style/Divider.Tiny"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/header_player_games_total"/>

            <TextView
                android:id="@+id/player_details_played_games"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"/>
        </LinearLayout>

        <View style="@style/Divider.Tiny"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/header_player_games_won"/>

            <TextView
                android:id="@+id/player_details_won_games"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"/>
        </LinearLayout>

        <View style="@style/Divider.Tiny"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/header_player_games_lost"/>

            <TextView
                android:id="@+id/player_details_lost_games"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"/>
        </LinearLayout>

        <View style="@style/Divider.Tiny"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/header_player_games_tied"/>

            <TextView
                android:id="@+id/player_details_tied_games"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"/>
        </LinearLayout>

        <View style="@style/Divider.Tiny"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/header_player_win_rate"/>

            <TextView
                android:id="@+id/player_details_win_rate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"/>
        </LinearLayout>

        <View style="@style/Divider.Tiny"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/header_player_mmr"/>

            <TextView
                android:id="@+id/player_details_mmr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"/>
        </LinearLayout>

        <Button
            android:id="@+id/button_player_details_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_player_details_back"/>

    </LinearLayout>
</RelativeLayout>